crates/runtime/tests/models/snapshots/integration_models__models__search__s3vector_chunking_metadata_view_vector_search_sql_match_and_underlying_explain.snap
---
source: crates/runtime/tests/models/search.rs
description: "SELECT id, _match, answer, trunc(_score, 3) FROM vector_search(qs_view, 'second') order by _score desc, id LIMIT 4"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                   |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs_view, Utf8("second")).id, vector_search(qs_view, Utf8("second"))._match, vector_search(qs_view, Utf8("second")).answer, trunc(vector_search(qs_view, Utf8("second"))._score,Int64(3))                                                                                                                                                     |
|               |   Sort: vector_search(qs_view, Utf8("second"))._score DESC NULLS FIRST, vector_search(qs_view, Utf8("second")).id ASC NULLS LAST, fetch=4                                                                                                                                                                                                                              |
|               |     Projection: vector_search(qs_view, Utf8("second")).id, vector_search(qs_view, Utf8("second"))._match, vector_search(qs_view, Utf8("second")).answer, trunc(vector_search(qs_view, Utf8("second"))._score, Int64(3)), vector_search(qs_view, Utf8("second"))._score                                                                                                 |
|               |       TableScan: vector_search(qs_view, Utf8("second")) projection=[_match, _score, answer, id]                                                                                                                                                                                                                                                                        |
| physical_plan | ProjectionExec: expr=[id@0 as id, _match@1 as _match, answer@2 as answer, trunc(vector_search(qs_view, Utf8("second"))._score,Int64(3))@3 as trunc(vector_search(qs_view, Utf8("second"))._score,Int64(3))]                                                                                                                                                            |
|               |   SortPreservingMergeExec: [_score@4 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                                                                                                                                                               |
|               |     SortExec: TopK(fetch=4), expr=[_score@4 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                   |
|               |       ProjectionExec: expr=[id@2 as id, CAST(substr(answer@4, CAST(__common_expr_1@0 + 1 AS Int64), CAST(array_element(__common_expr_2@1, 2) - __common_expr_1@0 AS Int64)) AS Utf8) as _match, answer@4 as answer, trunc(_score@3, 3) as trunc(vector_search(qs_view, Utf8("second"))._score,Int64(3)), _score@3 as _score]                                           |
|               |         ProjectionExec: expr=[array_element(__common_expr_3@0, 1) as __common_expr_1, __common_expr_3@0 as __common_expr_2, id@1 as id, _score@2 as _score, answer@3 as answer]                                                                                                                                                                                        |
|               |           ProjectionExec: expr=[CAST(answer_offset@1 AS List(non-null Int32)) as __common_expr_3, id@0 as id, _score@2 as _score, answer@3 as answer]                                                                                                                                                                                                                  |
|               |             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                       |
|               |               HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@0)], projection=[id@0, answer_offset@1, _score@2, answer@3]                                                                                                                                                                                             |
|               |                 CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                 |
|               |                   AggregateExec: mode=FinalPartitioned, gby=[id@0 as id], aggr=[first_value(answer_offset) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer_offset, first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score, first_value(_spice.search_field) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer] |
|               |                     RepartitionExec: partitioning=Hash([id@0], 3), input_partitions=3                                                                                                                                                                                                                                                                                  |
|               |                       AggregateExec: mode=Partial, gby=[id@0 as id], aggr=[first_value(answer_offset) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer_offset, first_value(_score) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as _score, first_value(_spice.search_field) ORDER BY [_score DESC NULLS LAST, id ASC NULLS LAST] as answer]      |
|               |                         ProjectionExec: expr=[union_extract(json_get(key@2, id), int) as id, answer_offset@0 as answer_offset, _spice.search_field@1 as _spice.search_field, 1 - distance@3 as _score]                                                                                                                                                                 |
|               |                           BytesProcessedExec                                                                                                                                                                                                                                                                                                                           |
|               |                             RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                       |
|               |                               S3VectorsQueryExec (INDEX_NAME_1): limit=100                                                                                                                                                                                                                                                                                             |
|               |                 SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                     |
|               |                   BytesProcessedExec                                                                                                                                                                                                                                                                                                                                   |
|               |                     DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                                                                                                                                                  |
|               |                                                                                                                                                                                                                                                                                                                                                                        |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
